remade kafka
