# internal/service/api/handlers/user_update.go
@@ -27,7 +27,6 @@ func UserUpdate(w http.ResponseWriter, r *http.Request) {
 
 	fields := map[string]any{
 		"username":      req.Data.Attributes.Username,
-		"role":          req.Data.Attributes.Role,
 		"verified":      req.Data.Attributes.Verified,
 		"title_name":    req.Data.Attributes.TitleName,
 		"speciality":    req.Data.Attributes.Speciality,
